--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.+"
+    testCompile 'org.robolectric:robolectric:3.6.1'
     compile 'com.android.support:appcompat-v7:27.0.2'
 }
