--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,8 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -29,5 +31,9 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.+"
     testCompile 'org.robolectric:robolectric:3.6.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
+
+    compile 'com.android.support:support-annotations:27.0.2'
+
     compile 'com.android.support:appcompat-v7:27.0.2'
 }
